--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -42,11 +42,7 @@ ssi = { version = "0.12" }
 textwrap = "0.16"
 tokio = { version = "1.47", features = ["full"] }
 tokio-stream = "0.1"
-tracing = { version = "0.1", features = [
-  "max_level_debug",
-  "release_max_level_info",
-  "valuable",
-] }
+tracing = { version = "0.1", features = ["valuable"] }
 tracing-subscriber = { version = "0.3", features = [
   "env-filter",
   "fmt",
