--- a/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-tdk-common"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.3.0"
+version = "0.3.1"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -31,7 +31,7 @@ keyring = { version = "3.6", features = [
   "sync-secret-service",
 ] }
 moka = { version = "0.12", features = ["future"] }
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+reqwest = { version = "0.13", features = ["rustls", "json"] }
 rustls = { version = "0.23", default-features = false, features = [
   "aws_lc_rs",
   "tls12",
@@ -40,5 +40,5 @@ rustls-platform-verifier = "0.6"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "2.0"
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 tracing = "0.1"
