--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-helpers"
-version = "0.11.4"
+version = "0.11.5"
 description = "Affinidi Messaging Helpers"
 edition.workspace = true
 authors.workspace = true
@@ -44,13 +44,13 @@ rcgen = { version = "0.14", default-features = false, features = [
   "pem",
 ] }
 regex = "1.12"
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+reqwest = { version = "0.13", features = ["rustls", "json"] }
 ring = { version = "0.17", features = ["std"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
 time = "0.3"
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 toml = "0.9"
 tracing = { version = "0.1", features = ["valuable"] }
 tracing-subscriber = { version = "0.3", features = [
@@ -59,7 +59,7 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
-uuid = { version = "1.19", features = ["v4", "fast-rng"] }
+uuid = { version = "1.20", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 affinidi-tdk.workspace = true
