--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-text-client"
-version = "0.11.4"
+version = "0.11.5"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -26,19 +26,19 @@ base64 = "0.22"
 chrono = "0.4"
 circular-queue = { version = "0.2", features = ["serde_support"] }
 # Crossterm must match the version used in ratatui
-crossterm = { version = "0.28", features = ["event-stream"] }
+crossterm = { version = "0.29", features = ["event-stream"] }
 image = "0.25"
 log = "0.4"
 qrcode = "0.14"
 rand = "0.9"
-ratatui = "0.29"
-ratatui-image = { version = "8", features = ["crossterm", "image-defaults"] }
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+ratatui = "0.30"
+ratatui-image = { version = "10", features = ["crossterm", "image-defaults"] }
+reqwest = { version = "0.13", features = ["rustls", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
 textwrap = "0.16"
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 tokio-stream = "0.1"
 tracing = { version = "0.1", features = ["valuable"] }
 tracing-subscriber = { version = "0.3", features = [
@@ -47,6 +47,6 @@ tracing-subscriber = { version = "0.3", features = [
   "json",
   "valuable",
 ] }
-tui-input = { version = "0.14", features = ["ratatui-crossterm"] }
-tui-logger = { version = "0.17", features = ["tracing-support"] }
-uuid = { version = "1.19", features = ["v4", "fast-rng"] }
+tui-input = { version = "0.15", features = ["ratatui-crossterm"] }
+tui-logger = { version = "0.18", features = ["tracing-support"] }
+uuid = { version = "1.20", features = ["v4", "fast-rng"] }
