--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-tdk"
-version = "0.4.1"
+version = "0.4.2"
 description.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -27,6 +27,7 @@ affinidi-messaging-didcomm.workspace = true
 affinidi-did-authentication.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
+affinidi-crypto.workspace = true
 affinidi-meeting-place = { workspace = true, optional = true }
 affinidi-data-integrity = { workspace = true, optional = true }
 
@@ -48,4 +49,3 @@ tracing-subscriber = { version = "0.3", features = [
 
 [lints]
 workspace = true
-
