--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   rust-pipeline:
+    # TODO: replace with main
     uses: affinidi/pipeline-rust/.github/workflows/checks.yaml@feat/chafa
     secrets: inherit
     with:
